2008-04-30  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #528288

	* em-folder-browser.c: (emfb_init), (em_folder_browser_show_wide):
	Ensure minimum size for preview and message list.
	* em-folder-browser.c: (get_view_query):
	Distinguish between no filter and custom filter.
	* message-list.c: (regen_list_done):
	Set info message to tree when no message shown in a list.

2008-04-30  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #530245

	* searchtypes.xml: Let searches work with labels again.

2008-04-30  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #467892

	* em-folder-view.c: (em_folder_view_open_selected):
	Do not inherit search filters when opening messages in new window.
	* message-list.c: (regen_list_exec):
	If we are called from folder_changed even, then keep the actually
	selected message so it will not disappear when user reads it and
	it doesn't belong to actual filter anymore.

2008-04-30  Shuai Liu  <shuai.liu@sun.com>

	** Fix for bug #530672
	Evolution crashes when viewing pgp-signed message

	* em-format-html-display.c: Modify the array of smime_sign_colour 
	from 4 to 5 to ensure the input by data-server is right

2008-04-29  Milan Crha  <mcrha@redhat.com>

	* em-utils.c: (em_utils_snoop_type):
	Fixes compiler warning (unused variable).

2008-04-29  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #511337

	* em-format-html.h: (EMFormatHTMLState), (struct _EMFormatHTML):
	* em-format-html.c: (efh_init), (efh_format_done),
	(efh_format_timeout): Track state of the object to recognize
	whether rendering new content or doing nothing.
	* em-format-html-display.c: (efhd_can_process_attachment),
	(efhd_attachment_show), (efhd_attachment_popup),
	(efhd_attachment_image), (efhd_attachment_button):
	Do nothing when EMFormatHTML object's state is RENDERING,
	the puri object instance is not valid anyway.

2008-04-28  Johan Euphrosine  <proppy@aminche.com>

	** Fix for bug #529247

	* em-format-html.h (struct _EMFormatHTML): Add header_colour.
